--- a/db_config.ini
+++ b/db_config.ini
@@ -15,3 +15,12 @@ port     = 3306
 dbname   = signboard
 user     = donga
 password = Leehsong(1)
+
+# ---------- Meta DB ---------- #
+[meta_db]
+driver   = postgres
+host     = ezgeo.fortiddns.com
+port     = 12165
+dbname   = ws_signboard
+user     = postgres
+password = nextage200$
